--- a/train.ipynb
+++ b/train.ipynb
@@ -25,7 +25,7 @@
     "targetName = f'{base}/eng.train.trg'\n",
     "gloveFile = f'{base}/trimmed.300d.Cased.txt'\n",
     "symbFile = f'{base}/sym.glove'\n",
-    "prevCheckpoint = 'lightning_logs/version_7/epoch=502-step=24938.ckpt'\n",
+    "prevCheckpoint = None#'lightning_logs/version_7/epoch=502-step=24938.ckpt'\n",
     "data = NERDataset(sourceName, targetName, gloveFile, symbFile)\n",
     "loader = data.getLoader(4096)"
    ]
@@ -45,18 +45,18 @@
       "    \"numWords\": 21388,\n",
       "    \"wordEmbedding\": 300,\n",
       "    \"contextOutputUnits\": 128,\n",
-      "    \"contextTransitionNumber\": 4,\n",
+      "    \"contextTransitionNumber\": 2,\n",
       "    \"encoderUnits\": 256,\n",
       "    \"decoderUnits\": 256,\n",
       "    \"transitionNumber\": 4,\n",
       "    \"numTags\": 17\n",
       "}\n",
-      "Trainable parameters: 7,313,341\n"
+      "Trainable parameters: 7,114,173\n"
      ]
     }
    ],
    "source": [
-    "with open('config.json', 'r') as file:\n",
+    "with open('config_small.json', 'r') as file:\n",
     "    kwargs = json.load(file)\n",
     "print(\"Init model params =\", json.dumps(kwargs, indent=4))\n",
     "model = GlobalContextualDeepTransition(**kwargs)\n",
@@ -108,7 +108,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a03a1948a2ea474ca1aa774f4ac9df60",
+       "model_id": "3e5eb0c930034e078fb331f74736f94e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -118,17 +118,49 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\users\\deepak h r\\appdata\\local\\programs\\python\\python37\\lib\\site-packages\\torch\\optim\\lr_scheduler.py:200: UserWarning: Please also save or load the state of the optimzer when saving or loading the scheduler.\n",
+      "  warnings.warn(SAVE_STATE_WARNING, UserWarning)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saving at lightning_logs/backup/ckpt-small00\n",
+      "Saving at lightning_logs/backup/ckpt-small05\n",
+      "Saving at lightning_logs/backup/ckpt-small10\n",
+      "Saving at lightning_logs/backup/ckpt-small15\n",
+      "Saving at lightning_logs/backup/ckpt-small20\n",
+      "Saving at lightning_logs/backup/ckpt-small25\n",
+      "Saving at lightning_logs/backup/ckpt-small30\n",
+      "Saving at lightning_logs/backup/ckpt-small35\n",
+      "Saving at lightning_logs/backup/ckpt-small40\n",
+      "Saving at lightning_logs/backup/ckpt-small45\n",
+      "Saving at lightning_logs/backup/ckpt-small50\n",
+      "Saving at lightning_logs/backup/ckpt-small55\n",
+      "Saving at lightning_logs/backup/ckpt-small60\n",
+      "Saving at lightning_logs/backup/ckpt-small65\n",
+      "Saving at lightning_logs/backup/ckpt-small70\n",
+      "Saving at lightning_logs/backup/ckpt-small75\n",
+      "Saving at lightning_logs/backup/ckpt-small80\n",
+      "Saving at lightning_logs/backup/ckpt-small85\n"
+     ]
     }
    ],
    "source": [
     "ckpt = SaveEachEpoch(\n",
     "    dirpath='lightning_logs/backup/',\n",
-    "    filename='ckpt-{epoch:02d}',\n",
+    "    filename='ckpt-small{epoch:02d}',\n",
     "    period=5\n",
     ")\n",
     "\n",
     "trainer = pl.Trainer(resume_from_checkpoint=prevCheckpoint, callbacks=[ckpt],\n",
-    "                        gradient_clip_val=5., gpus=1, max_epochs=2000, default_root_dir=base)\n",
+    "                        gradient_clip_val=5., gpus=1, max_epochs=500)\n",
     "trainer.fit(model, loader)"
    ]
   },
