model params match perfectly

--- a/params.ipynb
+++ b/params.ipynb
@@ -54,13 +54,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Trainable parameters: 7,443,753\n"
+      "Trainable parameters: 7,443,797\n"
      ]
     }
    ],
    "source": [
     "numParams = sum(p.numel() for p in model.parameters() if p.requires_grad)\n",
-    "print(f\"Trainable parameters: {numParams:,}\") # 7,313,34"
+    "print(f\"Trainable parameters: {numParams:,}\") # 7,443,753"
    ]
   },
   {
@@ -72,109 +72,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "gloveBias                                                       shape (1, 300)     300\n",
-      "cnn/embedding/weight                                            shape (100, 128)   12800\n",
-      "cnn/conv1d/weight                                               shape (128, 128, 3) 49152\n",
-      "cnn/conv1d/bias                                                 shape (128,)       128\n",
-      "outerCnn/embedding/weight                                       shape (100, 128)   12800\n",
-      "outerCnn/conv1d/weight                                          shape (128, 128, 3) 49152\n",
-      "outerCnn/conv1d/bias                                            shape (128,)       128\n",
-      "glove/weight                                                    shape (21388, 300) 6416400\n",
-      "forwardEncoder/linearGRU/reset_gate                             shape (556, 128)   71168\n",
-      "forwardEncoder/linearGRU/update_gate                            shape (556, 128)   71168\n",
-      "forwardEncoder/linearGRU/linear_gate                            shape (556, 128)   71168\n",
-      "forwardEncoder/linearGRU/linear_transform                       shape (428, 128)   54784\n",
-      "forwardEncoder/linearGRU/Cx                                     shape (428, 128)   54784\n",
-      "forwardEncoder/linearGRU/reset_norm/weight                      shape (128,)       128\n",
-      "forwardEncoder/linearGRU/reset_norm/bias                        shape (128,)       128\n",
-      "forwardEncoder/linearGRU/update_norm/weight                     shape (128,)       128\n",
-      "forwardEncoder/linearGRU/update_norm/bias                       shape (128,)       128\n",
-      "forwardEncoder/linearGRU/linear_norm/weight                     shape (128,)       128\n",
-      "forwardEncoder/linearGRU/linear_norm/bias                       shape (128,)       128\n",
-      "forwardEncoder/linearGRU/Ch/weight                              shape (128, 128)   16384\n",
-      "forwardEncoder/linearGRU/Ch/bias                                shape (128,)       128\n",
-      "forwardEncoder/transitionGRU/0/reset_gate                       shape (128, 128)   16384\n",
-      "forwardEncoder/transitionGRU/0/update_gate                      shape (128, 128)   16384\n",
-      "forwardEncoder/transitionGRU/0/reset_norm/weight                shape (128,)       128\n",
-      "forwardEncoder/transitionGRU/0/reset_norm/bias                  shape (128,)       128\n",
-      "forwardEncoder/transitionGRU/0/update_norm/weight               shape (128,)       128\n",
-      "forwardEncoder/transitionGRU/0/update_norm/bias                 shape (128,)       128\n",
-      "forwardEncoder/transitionGRU/0/candidate_gate/weight            shape (128, 128)   16384\n",
-      "forwardEncoder/transitionGRU/0/candidate_gate/bias              shape (128,)       128\n",
-      "forwardEncoder/transitionGRU/1/reset_gate                       shape (128, 128)   16384\n",
-      "forwardEncoder/transitionGRU/1/update_gate                      shape (128, 128)   16384\n",
-      "forwardEncoder/transitionGRU/1/reset_norm/weight                shape (128,)       128\n",
-      "forwardEncoder/transitionGRU/1/reset_norm/bias                  shape (128,)       128\n",
-      "forwardEncoder/transitionGRU/1/update_norm/weight               shape (128,)       128\n",
-      "forwardEncoder/transitionGRU/1/update_norm/bias                 shape (128,)       128\n",
-      "forwardEncoder/transitionGRU/1/candidate_gate/weight            shape (128, 128)   16384\n",
-      "forwardEncoder/transitionGRU/1/candidate_gate/bias              shape (128,)       128\n",
-      "forwardEncoder/transitionGRU/2/reset_gate                       shape (128, 128)   16384\n",
-      "forwardEncoder/transitionGRU/2/update_gate                      shape (128, 128)   16384\n",
-      "forwardEncoder/transitionGRU/2/reset_norm/weight                shape (128,)       128\n",
-      "forwardEncoder/transitionGRU/2/reset_norm/bias                  shape (128,)       128\n",
-      "forwardEncoder/transitionGRU/2/update_norm/weight               shape (128,)       128\n",
-      "forwardEncoder/transitionGRU/2/update_norm/bias                 shape (128,)       128\n",
-      "forwardEncoder/transitionGRU/2/candidate_gate/weight            shape (128, 128)   16384\n",
-      "forwardEncoder/transitionGRU/2/candidate_gate/bias              shape (128,)       128\n",
-      "forwardEncoder/transitionGRU/3/reset_gate                       shape (128, 128)   16384\n",
-      "forwardEncoder/transitionGRU/3/update_gate                      shape (128, 128)   16384\n",
-      "forwardEncoder/transitionGRU/3/reset_norm/weight                shape (128,)       128\n",
-      "forwardEncoder/transitionGRU/3/reset_norm/bias                  shape (128,)       128\n",
-      "forwardEncoder/transitionGRU/3/update_norm/weight               shape (128,)       128\n",
-      "forwardEncoder/transitionGRU/3/update_norm/bias                 shape (128,)       128\n",
-      "forwardEncoder/transitionGRU/3/candidate_gate/weight            shape (128, 128)   16384\n",
-      "forwardEncoder/transitionGRU/3/candidate_gate/bias              shape (128,)       128\n",
-      "backwardEncoder/linearGRU/reset_gate                            shape (556, 128)   71168\n",
-      "backwardEncoder/linearGRU/update_gate                           shape (556, 128)   71168\n",
-      "backwardEncoder/linearGRU/linear_gate                           shape (556, 128)   71168\n",
-      "backwardEncoder/linearGRU/linear_transform                      shape (428, 128)   54784\n",
-      "backwardEncoder/linearGRU/Cx                                    shape (428, 128)   54784\n",
-      "backwardEncoder/linearGRU/reset_norm/weight                     shape (128,)       128\n",
-      "backwardEncoder/linearGRU/reset_norm/bias                       shape (128,)       128\n",
-      "backwardEncoder/linearGRU/update_norm/weight                    shape (128,)       128\n",
-      "backwardEncoder/linearGRU/update_norm/bias                      shape (128,)       128\n",
-      "backwardEncoder/linearGRU/linear_norm/weight                    shape (128,)       128\n",
-      "backwardEncoder/linearGRU/linear_norm/bias                      shape (128,)       128\n",
-      "backwardEncoder/linearGRU/Ch/weight                             shape (128, 128)   16384\n",
-      "backwardEncoder/linearGRU/Ch/bias                               shape (128,)       128\n",
-      "backwardEncoder/transitionGRU/0/reset_gate                      shape (128, 128)   16384\n",
-      "backwardEncoder/transitionGRU/0/update_gate                     shape (128, 128)   16384\n",
-      "backwardEncoder/transitionGRU/0/reset_norm/weight               shape (128,)       128\n",
-      "backwardEncoder/transitionGRU/0/reset_norm/bias                 shape (128,)       128\n",
-      "backwardEncoder/transitionGRU/0/update_norm/weight              shape (128,)       128\n",
-      "backwardEncoder/transitionGRU/0/update_norm/bias                shape (128,)       128\n",
-      "backwardEncoder/transitionGRU/0/candidate_gate/weight           shape (128, 128)   16384\n",
-      "backwardEncoder/transitionGRU/0/candidate_gate/bias             shape (128,)       128\n",
-      "backwardEncoder/transitionGRU/1/reset_gate                      shape (128, 128)   16384\n",
-      "backwardEncoder/transitionGRU/1/update_gate                     shape (128, 128)   16384\n",
-      "backwardEncoder/transitionGRU/1/reset_norm/weight               shape (128,)       128\n",
-      "backwardEncoder/transitionGRU/1/reset_norm/bias                 shape (128,)       128\n",
-      "backwardEncoder/transitionGRU/1/update_norm/weight              shape (128,)       128\n",
-      "backwardEncoder/transitionGRU/1/update_norm/bias                shape (128,)       128\n",
-      "backwardEncoder/transitionGRU/1/candidate_gate/weight           shape (128, 128)   16384\n",
-      "backwardEncoder/transitionGRU/1/candidate_gate/bias             shape (128,)       128\n",
-      "backwardEncoder/transitionGRU/2/reset_gate                      shape (128, 128)   16384\n",
-      "backwardEncoder/transitionGRU/2/update_gate                     shape (128, 128)   16384\n",
-      "backwardEncoder/transitionGRU/2/reset_norm/weight               shape (128,)       128\n",
-      "backwardEncoder/transitionGRU/2/reset_norm/bias                 shape (128,)       128\n",
-      "backwardEncoder/transitionGRU/2/update_norm/weight              shape (128,)       128\n",
-      "backwardEncoder/transitionGRU/2/update_norm/bias                shape (128,)       128\n",
-      "backwardEncoder/transitionGRU/2/candidate_gate/weight           shape (128, 128)   16384\n",
-      "backwardEncoder/transitionGRU/2/candidate_gate/bias             shape (128,)       128\n",
-      "backwardEncoder/transitionGRU/3/reset_gate                      shape (128, 128)   16384\n",
-      "backwardEncoder/transitionGRU/3/update_gate                     shape (128, 128)   16384\n",
-      "backwardEncoder/transitionGRU/3/reset_norm/weight               shape (128,)       128\n",
-      "backwardEncoder/transitionGRU/3/reset_norm/bias                 shape (128,)       128\n",
-      "backwardEncoder/transitionGRU/3/update_norm/weight              shape (128,)       128\n",
-      "backwardEncoder/transitionGRU/3/update_norm/bias                shape (128,)       128\n",
-      "backwardEncoder/transitionGRU/3/candidate_gate/weight           shape (128, 128)   16384\n",
-      "backwardEncoder/transitionGRU/3/candidate_gate/bias             shape (128,)       128\n"
+      "0/weight                                                        shape (256, 556)   142336\n",
+      "0/bias                                                          shape (256,)       256\n",
+      "3/weight                                                        shape (17, 256)    4352\n",
+      "3/bias                                                          shape (17,)        17\n"
      ]
     }
    ],
    "source": [
-    "for k, v in model.contextEncoder.state_dict().items():\n",
+    "for k, v in model.sequenceLabeller.output.state_dict().items():\n",
     "    print(k.ljust(63).replace('.', '/'), 'shape', str(v.numpy().shape).ljust(12), v.numel())"
    ]
   },
