training issue resolved

--- a/params.ipynb
+++ b/params.ipynb
@@ -86,10 +86,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "base = 'data/conll03'\n",
+    "sourceName = f'{base}/eng.train.src'\n",
+    "targetName = f'{base}/eng.train.trg'\n",
+    "gloveFile = f'{base}/trimmed.300d.Cased.txt'\n",
+    "symbFile = f'{base}/sym.glove'\n",
+    "data = NERDataset(sourceName, targetName, gloveFile, symbFile)\n",
+    "loader = data.getLoader(10)\n",
+    "batch = next(iter(loader))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loss is  2.853797674179077\n"
+     ]
+    }
+   ],
+   "source": [
+    "loss = model.training_step(batch, 0)\n",
+    "print(\"Loss is \", loss.item())"
+   ]
   }
  ],
  "metadata": {
